--- a/hpDistTable.html
+++ b/hpDistTable.html
@@ -280,20 +280,16 @@ border: 0;
 
 </head>
 <body>
-<table style="NAborder-bottom: 0; width: auto !important; margin-left: auto; margin-right: auto;" class="table">
-<caption>CS MLM output</caption>
+<table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
+<caption>HP MLM output</caption>
  <thead>
 <tr>
-<th style="empty-cells: hide;border-bottom:hidden;" colspan="2"></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">Gaussian</div></th>
+<th style="empty-cells: hide;border-bottom:hidden;" colspan="1"></th>
 <th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">Inverse Gaussian</div></th>
 <th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">Gamma</div></th>
 </tr>
   <tr>
    <th style="text-align:left;">   </th>
-   <th style="text-align:center;"> Description </th>
-   <th style="text-align:center;"> Est. </th>
-   <th style="text-align:center;"> (S.E. ) </th>
    <th style="text-align:center;"> Est. </th>
    <th style="text-align:center;"> (S.E. ) </th>
    <th style="text-align:center;"> Est. </th>
@@ -303,168 +299,159 @@ border: 0;
 <tbody>
   <tr>
    <td style="text-align:left;"> (Intercept) </td>
-   <td style="text-align:center;"> µCS intercept </td>
-   <td style="text-align:center;"> 1.807 [1.599, 2.015]*** </td>
-   <td style="text-align:center;"> (0.105) </td>
-   <td style="text-align:center;"> 1.798 [1.543, 2.053]*** </td>
-   <td style="text-align:center;"> (0.129) </td>
-   <td style="text-align:center;"> 1.764 [1.667, 1.861]*** </td>
-   <td style="text-align:center;"> (0.049) </td>
+   <td style="text-align:center;"> 10.47 [7.72, 13.22]*** </td>
+   <td style="text-align:center;"> (1.40) </td>
+   <td style="text-align:center;"> 10.24 [6.47, 14.01]*** </td>
+   <td style="text-align:center;"> (1.92) </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> Visual Condition </td>
-   <td style="text-align:center;"> The effect of visual condition on µCS </td>
-   <td style="text-align:center;"> −0.093 [−0.126, −0.060]*** </td>
-   <td style="text-align:center;"> (0.016) </td>
-   <td style="text-align:center;"> −0.100 [−0.129, −0.071]*** </td>
-   <td style="text-align:center;"> (0.015) </td>
-   <td style="text-align:center;"> −0.088 [−0.132, −0.044]*** </td>
-   <td style="text-align:center;"> (0.022) </td>
+   <td style="text-align:left;"> age.s </td>
+   <td style="text-align:center;"> −0.27 [−1.07, 0.52] </td>
+   <td style="text-align:center;"> (0.40) </td>
+   <td style="text-align:center;"> −0.32 [−0.97, 0.33] </td>
+   <td style="text-align:center;"> (0.33) </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> Age </td>
-   <td style="text-align:center;"> The effect of age on µCS </td>
-   <td style="text-align:center;"> −0.004 [−0.006, −0.001]** </td>
-   <td style="text-align:center;"> (0.001) </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:left;"> cs.s </td>
+   <td style="text-align:center;"> −0.34 [−0.65, −0.03]* </td>
+   <td style="text-align:center;"> (0.16) </td>
+   <td style="text-align:center;"> −0.38 [−1.05, 0.28] </td>
+   <td style="text-align:center;"> (0.34) </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> SD (Intercept Participant ID) </td>
-   <td style="text-align:center;"> The SD of the unique intercepts for each participant </td>
-   <td style="text-align:center;"> 0.114 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.122 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.149 </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:left;"> va.s </td>
+   <td style="text-align:center;"> 0.00 [−0.14, 0.15] </td>
+   <td style="text-align:center;"> (0.07) </td>
+   <td style="text-align:center;"> 0.00 [−0.39, 0.40] </td>
+   <td style="text-align:center;"> (0.20) </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> SD (Intercept Researcher ID) </td>
-   <td style="text-align:center;"> The SD of the unique intercepts for each researcher </td>
-   <td style="text-align:center;"> 0.162 </td>
+   <td style="text-align:left;"> resID2 </td>
+   <td style="text-align:center;"> −0.12 [−2.01, 1.78] </td>
+   <td style="text-align:center;"> (0.97) </td>
+   <td style="text-align:center;"> 0.00 [−1.68, 1.68] </td>
+   <td style="text-align:center;"> (0.86) </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> resID3 </td>
+   <td style="text-align:center;"> 1.26 [−0.51, 3.04] </td>
+   <td style="text-align:center;"> (0.91) </td>
+   <td style="text-align:center;"> 1.13 [−0.34, 2.59] </td>
+   <td style="text-align:center;"> (0.75) </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> conditionclear_v_blur </td>
+   <td style="text-align:center;"> 0.54 [0.15, 0.93]** </td>
+   <td style="text-align:center;"> (0.20) </td>
+   <td style="text-align:center;"> 0.62 [0.05, 1.19]* </td>
+   <td style="text-align:center;"> (0.29) </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> contrasthigh_vs_degraded </td>
+   <td style="text-align:center;"> 4.46 [4.19, 4.73]*** </td>
+   <td style="text-align:center;"> (0.14) </td>
+   <td style="text-align:center;"> 4.41 [4.22, 4.60]*** </td>
+   <td style="text-align:center;"> (0.10) </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> contrastlow_vs_medium </td>
+   <td style="text-align:center;"> 7.32 [6.83, 7.82]*** </td>
+   <td style="text-align:center;"> (0.25) </td>
+   <td style="text-align:center;"> 7.17 [6.85, 7.49]*** </td>
+   <td style="text-align:center;"> (0.16) </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> conditionclear_v_blur × contrasthigh_vs_degraded </td>
+   <td style="text-align:center;"> 1.20 [0.67, 1.73]*** </td>
+   <td style="text-align:center;"> (0.27) </td>
+   <td style="text-align:center;"> 1.18 [0.80, 1.56]*** </td>
+   <td style="text-align:center;"> (0.19) </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> conditionclear_v_blur × contrastlow_vs_medium </td>
+   <td style="text-align:center;"> 2.24 [1.25, 3.23]*** </td>
+   <td style="text-align:center;"> (0.51) </td>
+   <td style="text-align:center;"> 2.15 [1.51, 2.78]*** </td>
+   <td style="text-align:center;"> (0.32) </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;"> SD (Intercept id) </td>
+   <td style="text-align:center;"> 0.87 </td>
    <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.065 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.077 </td>
+   <td style="text-align:center;"> 1.46 </td>
    <td style="text-align:center;">  </td>
   </tr>
   <tr>
    <td style="text-align:left;"> SD (Observations) </td>
-   <td style="text-align:center;"> ??? </td>
-   <td style="text-align:center;"> 0.084 </td>
+   <td style="text-align:center;"> 0.26 </td>
    <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.051 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.000 </td>
+   <td style="text-align:center;"> 0.69 </td>
    <td style="text-align:center;">  </td>
   </tr>
   <tr>
-   <td style="text-align:left;"> SD (Slope Visual Condition) </td>
-   <td style="text-align:center;"> The SD of the gradient of the slopes of visual condition for each participant </td>
+   <td style="text-align:left;"> SD (conditionclear_v_blur id) </td>
    <td style="text-align:center;">  </td>
    <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.159 </td>
+   <td style="text-align:center;"> 1.01 </td>
    <td style="text-align:center;">  </td>
   </tr>
   <tr>
-   <td style="text-align:left;box-shadow: 0px 1.5px"> Cor (Intercept~condition1 id) </td>
-   <td style="text-align:center;box-shadow: 0px 1.5px"> The correlation of the slope gradient and intercept for each participant </td>
+   <td style="text-align:left;box-shadow: 0px 1.5px"> Cor (Intercept~conditionclear_v_blur id) </td>
    <td style="text-align:center;box-shadow: 0px 1.5px">  </td>
    <td style="text-align:center;box-shadow: 0px 1.5px">  </td>
-   <td style="text-align:center;box-shadow: 0px 1.5px">  </td>
-   <td style="text-align:center;box-shadow: 0px 1.5px">  </td>
-   <td style="text-align:center;box-shadow: 0px 1.5px"> 0.480 </td>
+   <td style="text-align:center;box-shadow: 0px 1.5px"> 0.13 </td>
    <td style="text-align:center;box-shadow: 0px 1.5px">  </td>
   </tr>
   <tr>
    <td style="text-align:left;"> Num.Obs. </td>
-   <td style="text-align:center;"> Number of observations - 2 per participant </td>
-   <td style="text-align:center;"> 104 </td>
+   <td style="text-align:center;"> 10479 </td>
    <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 104 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 104 </td>
+   <td style="text-align:center;"> 10479 </td>
    <td style="text-align:center;">  </td>
   </tr>
   <tr>
    <td style="text-align:left;"> R2 Marg. </td>
-   <td style="text-align:center;"> Marginal R^2<br>
-                                Variance explained by fixed effects </td>
-   <td style="text-align:center;"> 0.096 </td>
+   <td style="text-align:center;"> 0.933 </td>
    <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.035 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.036 </td>
+   <td style="text-align:center;"> 0.827 </td>
    <td style="text-align:center;">  </td>
   </tr>
   <tr>
    <td style="text-align:left;"> R2 Cond. </td>
-   <td style="text-align:center;"> Conditional R^2<br>
-                                Variance explained by fixed and random effects </td>
-   <td style="text-align:center;"> 0.862 </td>
+   <td style="text-align:center;"> 0.983 </td>
    <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.297 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 1.000 </td>
+   <td style="text-align:center;"> 0.971 </td>
    <td style="text-align:center;">  </td>
   </tr>
   <tr>
    <td style="text-align:left;"> AIC </td>
-   <td style="text-align:center;"> Akaike Information Criterion (AIC)<br> 
-                                Considers the trade-off between model fit and model complexity by incorporating the likelihood, number of parameters, and sample size.<br> 
-                                AIC = n * ln(SSE/n) + 2 * k </td>
-   <td style="text-align:center;"> −100.5 </td>
+   <td style="text-align:center;"> 60169.5 </td>
    <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> −156.6 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> −1834.3 </td>
+   <td style="text-align:center;"> 60070.4 </td>
    <td style="text-align:center;">  </td>
   </tr>
   <tr>
    <td style="text-align:left;"> BIC </td>
-   <td style="text-align:center;"> Bayesian Information Criterion (BIC)<br>
-                                Introduces a stronger penalty for model complexity, prioritizing simpler models.<br>
-                                BIC = -2 * log(L) + k * log(n) </td>
-   <td style="text-align:center;"> −84.6 </td>
+   <td style="text-align:center;"> 60263.8 </td>
    <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> −143.4 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> −1815.8 </td>
+   <td style="text-align:center;"> 60179.3 </td>
    <td style="text-align:center;">  </td>
   </tr>
   <tr>
    <td style="text-align:left;"> ICC </td>
-   <td style="text-align:center;"> How strongly group members correlate with one another.<br>
-                                Values &lt; 0.5 = poor reliability<br>
-                                0.75 &gt; Values &gt;= 0.5 = moderate reliability<br>
-                                0.9 &gt; Values &gt;= 0.75 = good reliability<br>
-                                Values &gt;= 0.90 = excellent reliability. </td>
+   <td style="text-align:center;"> 0.7 </td>
+   <td style="text-align:center;">  </td>
    <td style="text-align:center;"> 0.8 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.3 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 1.0 </td>
    <td style="text-align:center;">  </td>
   </tr>
   <tr>
    <td style="text-align:left;"> RMSE </td>
-   <td style="text-align:center;"> Square root of the variance of the residuals and indicates the absolute fit of the model to the data.<br>
-                                Lower values indicate a bbetter fit. </td>
-   <td style="text-align:center;"> 0.06 </td>
+   <td style="text-align:center;"> 6.83 </td>
    <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.07 </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;"> 0.00 </td>
+   <td style="text-align:center;"> 6.76 </td>
    <td style="text-align:center;">  </td>
   </tr>
 </tbody>
-<tfoot><tr><td style="padding: 0; " colspan="100%">
-<sup></sup> Table Xva. MLM estimates for the effects of visual condition and age on VA. No p-value is presented for the intercept as the modelled data has been untransformed for the ease of interpretation. See the data and analysis code available at [blah blah] for the transformed data.</td></tr></tfoot>
 </table>
 </body>
 </html>
